--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-flask==2.0.1          # You already have
-notion-client==2.0.0  # You already have
-python-dotenv==0.19.0 # You already have
-requests==2.26.0      # You already have (needed for HTTP calls)
-gunicorn==20.1.0      # You already have (for production WSGI server)
-flask-cors==3.0.10    # You already have (for cross-origin requests)
+notion-client==2.0.0
+python-dotenv==0.19.0
+requests==2.26.0
