--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,20 +1,17 @@
 name: Sync Notion Data
 on:
   schedule:
-    - cron: '0 * * * *'  # Runs at the start of every hour
-  workflow_dispatch:     # Allows manual triggering
+    - cron: '0 * * * *'  # Runs hourly
+  workflow_dispatch:
 
 jobs:
-  sync-notion-data:
+  sync:
     runs-on: ubuntu-latest
     permissions:
-      contents: write    # Required to push changes
-    
+      contents: write
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Needed for git history
+      - uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -22,15 +19,16 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install notion-client python-dotenv
+        run: pip install notion-client python-dotenv
 
+      # FIXED PATH - Now correctly points to scripts/notion_to_json.py
       - name: Run Notion sync script
         env:
           NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
           NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
         run: |
+          echo "Current directory: $(pwd)"
+          ls -la scripts/  # Verify the file exists
           python scripts/notion_to_json.py
 
       - name: Commit and push changes
@@ -38,5 +36,5 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add docs/mindmap_data.json
-          git diff --quiet && git diff --staged --quiet || git commit -m "Auto-update: Sync Notion data [skip ci]"
+          git diff --quiet && git diff --staged --quiet || git commit -m "Auto-update mindmap data"
           git push
