--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,13 +2,13 @@ name: Sync Notion Data
 on:
   schedule:
     - cron: '0 * * * *'  # Runs hourly
-  workflow_dispatch:
+  workflow_dispatch:     # Manual trigger option
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      contents: write    # Required to push changes
 
     steps:
       - uses: actions/checkout@v4
@@ -21,20 +21,23 @@ jobs:
       - name: Install dependencies
         run: pip install notion-client python-dotenv
 
-      # FIXED PATH - Now correctly points to scripts/notion_to_json.py
-      - name: Run Notion sync script
+      - name: Debug - Show files
+        run: |
+          echo "=== Repository contents ==="
+          ls -la
+          echo "=== Scripts folder ==="
+          ls -la scripts/
+
+      - name: Run Notion sync
         env:
           NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
           NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
-        run: |
-          echo "Current directory: $(pwd)"
-          ls -la scripts/  # Verify the file exists
-          python scripts/notion_to_json.py
+        run: python scripts/notion_to_json.py
 
-      - name: Commit and push changes
+      - name: Commit and push
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add docs/mindmap_data.json
-          git diff --quiet && git diff --staged --quiet || git commit -m "Auto-update mindmap data"
+          git diff --quiet && git diff --staged --quiet || git commit -m "Auto-update: $(date)"
           git push
