--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,21 +1,20 @@
 name: Sync Notion Data
 on:
   schedule:
-    - cron: '0 * * * *'  # Runs hourly
-  workflow_dispatch:
+    - cron: '0 * * * *'  # Runs at the start of every hour
+  workflow_dispatch:     # Allows manual triggering
 
 jobs:
   sync:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write    # Required to push changes
+    
     steps:
-      - uses: actions/checkout@v4
-      
-      - name: Debug - Show files
-        run: |
-          echo "=== Current directory structure ==="
-          ls -R
-          echo "=== Script should be in scripts/ ==="
-          ls -la scripts/
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Get complete git history
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -23,28 +22,49 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        run: pip install notion-client python-dotenv
+        run: |
+          python -m pip install --upgrade pip
+          pip install notion-client python-dotenv
+
+      - name: Verify script location
+        run: |
+          echo "Repository contents:"
+          ls -R
+          echo "Checking for script:"
+          if [ -f "scripts/notion_to_json.py" ]; then
+            echo "Script found at scripts/notion_to_json.py"
+          elif [ -f "notion_to_json.py" ]; then
+            echo "Script found at notion_to_json.py"
+          else
+            echo "Error: Script not found!"
+            exit 1
+          fi
 
       - name: Run Notion sync
         env:
           NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
           NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
         run: |
-          # Try both possible locations
+          # Try both possible script locations
           if [ -f "scripts/notion_to_json.py" ]; then
             python scripts/notion_to_json.py
-          elif [ -f "notion_to_json.py" ]; then
-            python notion_to_json.py
           else
-            echo "Error: Could not find notion_to_json.py"
-            ls -R
-            exit 1
+            python notion_to_json.py
           fi
 
-      - name: Commit and push
+      - name: Configure Git
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+
+      - name: Commit and push changes
+        run: |
           git add docs/mindmap_data.json
-          git diff --quiet && git diff --staged --quiet || git commit -m "Auto-update: $(date)"
-          git push
+          if git diff --quiet --cached; then
+            echo "No changes to commit"
+          else
+            git commit -m "Auto-update: $(date +'%Y-%m-%d %H:%M')"
+            git pull --rebase origin main
+            git push origin main
+          fi
