--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,70 +1,46 @@
 name: Sync Notion Data
 on:
   schedule:
-    - cron: '0 * * * *'  # Runs at the start of every hour
-  workflow_dispatch:     # Allows manual triggering
+    - cron: '0 * * * *'  # Hourly sync
+  workflow_dispatch:
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     permissions:
-      contents: write    # Required to push changes
+      contents: write
     
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Get complete git history
+          fetch-depth: 0
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install notion-client python-dotenv
-
-      - name: Verify script location
-        run: |
-          echo "Repository contents:"
-          ls -R
-          echo "Checking for script:"
-          if [ -f "scripts/notion_to_json.py" ]; then
-            echo "Script found at scripts/notion_to_json.py"
-          elif [ -f "notion_to_json.py" ]; then
-            echo "Script found at notion_to_json.py"
-          else
-            echo "Error: Script not found!"
-            exit 1
-          fi
 
       - name: Run Notion sync
         env:
           NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
           NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
         run: |
-          # Try both possible script locations
-          if [ -f "scripts/notion_to_json.py" ]; then
-            python scripts/notion_to_json.py
-          else
-            python notion_to_json.py
-          fi
+          python scripts/notion_to_json.py --output docs/mindmap_data.json
 
-      - name: Configure Git
+      - name: Add nojekyll file
+        run: echo "" > docs/.nojekyll
+
+      - name: Commit changes
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-
-      - name: Commit and push changes
-        run: |
           git add docs/mindmap_data.json
-          if git diff --quiet --cached; then
-            echo "No changes to commit"
+          if git diff --cached --quiet; then
+            echo "No changes detected"
           else
-            git commit -m "Auto-update: $(date +'%Y-%m-%d %H:%M')"
-            git pull --rebase origin main
-            git push origin main
+            git commit -m "Auto-update mindmap data [skip ci]"
+            git push
           fi
