--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,21 +1,24 @@
 name: Sync Notion Data
+
 on:
   schedule:
-    - cron: '0 * * * *'  # Hourly sync
-  workflow_dispatch:
+    - cron: '*/5 * * * *'  # Every 5 minutes (for testing)
+  workflow_dispatch:        # Allows manual triggering
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
-    
+      contents: write  # Required to push changes
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - uses: actions/setup-python@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
@@ -33,14 +36,14 @@ jobs:
       - name: Add nojekyll file
         run: echo "" > docs/.nojekyll
 
-      - name: Commit changes
+      - name: Commit and push changes
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
+          git pull --rebase origin main
           git add docs/mindmap_data.json
           if git diff --cached --quiet; then
-            echo "No changes detected"
+            echo "No changes to commit"
           else
             git commit -m "Auto-update mindmap data [skip ci]"
             git push
-          fi
