--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -3,13 +3,13 @@ name: Sync Notion Data
 on:
   schedule:
     - cron: '*/5 * * * *'  # Every 5 minutes (for testing)
-  workflow_dispatch:        # Allows manual triggering
+  workflow_dispatch:
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # Required to push changes
+      contents: write
 
     steps:
       - name: Checkout repository
@@ -47,3 +47,4 @@ jobs:
           else
             git commit -m "Auto-update mindmap data [skip ci]"
             git push
+          fi
