--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -9,7 +9,7 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # Needed for git push
+      contents: write  # Needed to push to the repo
 
     steps:
       - name: Checkout repository
@@ -29,12 +29,11 @@ jobs:
         env:
           NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
           NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
-        run: python scripts/notion_to_json.py --output docs/mindmap_data.json
+        run: |
+          python scripts/notion_to_json.py --output docs/mindmap_data.json
+          echo "" > docs/.nojekyll
 
-      - name: Add .nojekyll (for GitHub Pages)
-        run: echo "" > docs/.nojekyll
-
-      - name: Commit and push changes
+      - name: Commit and push if changes
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
