--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -43,3 +43,14 @@ jobs:
           else
             git commit -m "Auto-update mindmap data [skip ci]"
             git push
+      - name: Commit and push changes
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add docs/mindmap_data.json docs/.nojekyll
+          if git diff --cached --quiet; then
+            echo "✅ No changes to commit"
+          else
+            git commit -m "Auto-update mindmap data [skip ci]"
+            git push
+          fi
