--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,14 +2,14 @@ name: Sync Notion Data
 
 on:
   schedule:
-    - cron: '*/15 * * * *'  # Every 15 minutes
+    - cron: '*/5 * * * *'  # Every 5 minutes for testing, change as needed for production
   workflow_dispatch:
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # Needed to push to the repo
+      contents: write
 
     steps:
       - name: Checkout repository
@@ -31,18 +31,10 @@ jobs:
           NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
         run: |
           python scripts/notion_to_json.py --output docs/mindmap_data.json
-          echo "" > docs/.nojekyll
 
-      - name: Commit and push if changes
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add docs/mindmap_data.json docs/.nojekyll
-          if git diff --cached --quiet; then
-            echo "✅ No changes to commit"
-          else
-            git commit -m "Auto-update mindmap data [skip ci]"
-            git push
+      - name: Add .nojekyll file
+        run: echo "" > docs/.nojekyll
+
       - name: Commit and push changes
         run: |
           git config --global user.name "GitHub Actions"
