--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -16,7 +16,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
+      - name: List scripts
+        run: ls -la scripts/
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
