--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,7 +2,7 @@ name: Sync Notion Data
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Every 5 minutes for testing, change as needed for production
+    - cron: '*/5 * * * *'  # Every 5 minutes for testing; change as needed for production.
   workflow_dispatch:
 
 jobs:
@@ -16,15 +16,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: List scripts
-        run: ls -la scripts/
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
       - name: Install dependencies
-        run: pip install notion-client python-dotenv
+        run: |
+          pip install notion-client python-dotenv
 
       - name: Run Notion sync
         env:
@@ -45,5 +45,6 @@ jobs:
             echo "✅ No changes to commit"
           else
             git commit -m "Auto-update mindmap data [skip ci]"
-            git push
+            # Force push to ensure the runner’s commit updates the remote branch
+            git push --force-with-lease
           fi
