--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -46,5 +46,5 @@ jobs:
           else
             git commit -m "Auto-update mindmap data [skip ci]"
             git fetch origin main
-            git push --force
+            git push origin HEAD:main --force
           fi
